ignore some directories

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 .history
 .svn/
 migrate_working_dir/
+lib/firebase_options.dart
+macos/Runner/GoogleService-Info.plist
+
 
 # IntelliJ related
 *.iml
