--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@
 .history
 .svn/
 migrate_working_dir/
-lib/firebase_options.dart
-macos/Runner/GoogleService-Info.plist
+/lib/firebase_options.dart
+/macos/Runner/GoogleService-Info.plist
 
 
 # IntelliJ related
